[K/N] Add JDK-version-dependent JVM flags for `nativeTestTask`
The previous commit allows running tests within `nativeTestTask` using
JDK versions other than the default JDK 11. The goal is to run them on
JDK 25.

When running the tests on JDK 24+, they can emit expected warnings
caused by usage of JNI, restricted FFM API or `sun.misc.Unsafe`.

This commit adds the JVM args to those runs to suppress these warnings:
`--enable-native-access=ALL-UNNAMED` and
`--sun-misc-unsafe-memory-access=allow`.
Those warnings can become errors in future JDK versions, and the same
flags address that.

See https://openjdk.org/jeps/472, https://openjdk.org/jeps/454 and 
https://openjdk.org/jeps/498.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>